lougout initial stage, profile edit

--- a/Client/app/src/main/res/layout/activity_profile.xml
+++ b/Client/app/src/main/res/layout/activity_profile.xml
@@ -6,55 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="43dp"
-        android:adjustViewBounds="false"
-        android:cropToPadding="false"
-        app:layout_constraintBottom_toTopOf="@+id/table"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/coyoteprofile" />
 
     <TableLayout
-        android:id="@+id/table"
-        android:layout_width="wrap_content"
+        android:id="@+id/profiledetails"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:requiresFadingEdge="horizontal|vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
+            android:id="@+id/usernamerow"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="20dp">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp">
 
             <TextView
                 android:id="@+id/usernamelabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:text="Username:"
                 android:textColor="#F44336"
-                android:textSize="18sp" />
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
-                android:text="lorem" />
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:text="lorem"
+                android:textSize="20sp"/>
 
         </TableRow>
 
         <TableRow
+            android:id="@+id/namerow"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp">
 
             <TextView
@@ -64,64 +59,24 @@
                 android:layout_gravity="right|center_vertical"
                 android:text="Name: "
                 android:textColor="#F44336"
-                android:textSize="18sp" />
+                android:textSize="24sp"
+                android:layout_weight="1"
+                android:gravity="right"/>
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
-                android:text="iplsum" />
+                android:text="iplsum"
+                android:layout_weight="1"
+                android:textSize="20sp"/>
         </TableRow>
 
         <TableRow
+            android:id="@+id/discountrow"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/balancelabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:text="Balance: "
-                android:textColor="#F44336"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/balance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:text="iplsum" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/voucherslabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:text="Nº vouchers: "
-                android:textColor="#F44336"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/vouchers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:text="TextView" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp">
 
             <TextView
@@ -131,31 +86,90 @@
                 android:layout_gravity="right|center_vertical"
                 android:text="Stored Discount: "
                 android:textColor="#F44336"
-                android:textSize="18sp" />
+                android:textSize="24sp"
+                android:layout_weight="1"
+                android:gravity="right"/>
 
             <TextView
                 android:id="@+id/discount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
-                android:text="TextView" />
+                android:text="TextView"
+                android:layout_weight="1"
+                android:textSize="20sp"/>
         </TableRow>
+
+        <TableRow
+            android:id="@+id/voucherrow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
+
+            <TextView
+                android:id="@+id/voucherslabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:text="Nº vouchers: "
+                android:textColor="#F44336"
+                android:textSize="24sp"
+                android:layout_weight="1"
+                android:gravity="right"/>
+
+            <TextView
+                android:id="@+id/vouchers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:text="TextView"
+                android:layout_weight="1"
+                android:textSize="20sp"/>
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/spentrow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
+
+            <TextView
+                android:id="@+id/spentlabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:text="Total Spent: "
+                android:textColor="#F44336"
+                android:textSize="24sp"
+                android:layout_weight="1"
+                android:gravity="right"/>
+
+            <TextView
+                android:id="@+id/spent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:text="iplsum"
+                android:layout_weight="1"
+                android:textSize="20sp"/>
+
+        </TableRow>
+
     </TableLayout>
+
 
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="293dp"
-        android:layout_marginTop="50dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="157dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="Back"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/table" />
+        app:layout_constraintTop_toBottomOf="@id/profiledetails" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
