--- a/Client/app/src/main/res/menu/main.xml
+++ b/Client/app/src/main/res/menu/main.xml
@@ -8,4 +8,7 @@
     <item
         android:id="@+id/profile"
         android:title="@string/check_profile"/>
+    <item
+        android:id="@+id/logout"
+        android:title="LogOut"/>
 </menu>
