--- a/Client/app/src/main/res/menu/main.xml
+++ b/Client/app/src/main/res/menu/main.xml
@@ -10,5 +10,5 @@
         android:title="@string/check_profile"/>
     <item
         android:id="@+id/logout"
-        android:title="LogOut"/>
+        android:title="Logout"/>
 </menu>
