--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -224,7 +224,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:orientation="vertical"
-    tools:context=".NewTransaction">
+    tools:context=".Activities.NewTransaction">
 
     <TableRow
         android:id="@+id/addremove"
